--- a/index.html
+++ b/index.html
@@ -1,4 +1,85 @@
- <html>
-  <h1>Esta é minha primeira página no GitHub pages em 22 de março de 2025</h1>
-  <p>Obrigado, GitHub!</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Minha Empresa</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    header {
+      background-color: #0057b8;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+    }
+    nav {
+      text-align: center;
+      background: #003e8a;
+      padding: 10px;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 40px;
+      max-width: 900px;
+      margin: auto;
+      background: white;
+    }
+    footer {
+      background-color: #0057b8;
+      color: white;
+      text-align: center;
+      padding: 15px 0;
+      position: relative;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>PS Network Experts</h1>
+    <p>Especialistas em soluções de telecomunicações e tecnologia</p>
+  </header>
+
+  <nav>
+    <a href="#sobre">Sobre</a>
+    <a href="#servicos">Serviços</a>
+    <a href="#contato">Contato</a>
+  </nav>
+
+  <section id="sobre">
+    <h2>Sobre Nós</h2>
+    <p>Somos uma empresa com décadas de experiência em tecnologia e telecomunicações, oferecendo soluções de alta performance em redes ópticas, infraestrutura IP, segurança da informação e muito mais.</p>
+  </section>
+
+  <section id="servicos">
+    <h2>Nossos Serviços</h2>
+    <ul>
+      <li>Construção e manutenção de redes ópticas</li>
+      <li>Backbones IP e redes de acesso</li>
+      <li>Planejamento estratégico em infraestrutura de TI</li>
+      <li>Consultoria em segurança da informação</li>
+      <li>Gerenciamento de projetos críticos</li>
+    </ul>
+  </section>
+
+  <section id="contato">
+    <h2>Contato</h2>
+    <p>Email: contato@psnetwork.com.br</p>
+    <p>Telefone: (11) 1234-5678</p>
+    <p>Endereço: Rua das Conexões, 1000 - São Paulo, SP</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 PS Network Experts. Todos os direitos reservados.</p>
+  </footer>
+</body>
 </html>
