--- a/index.html
+++ b/index.html
@@ -3,71 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minha Empresa</title>
+  <title>PS Network Experts</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-    header {
-      background-color: #0057b8;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
-    nav {
-      text-align: center;
-      background: #003e8a;
-      padding: 10px;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      padding: 40px;
-      max-width: 900px;
-      margin: auto;
-      background: white;
-    }
-    footer {
-      background-color: #0057b8;
-      color: white;
-      text-align: center;
-      padding: 15px 0;
-      position: relative;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
+    header { background-color: #0057b8; color: white; padding: 20px 0; text-align: center; }
+    nav { text-align: center; background: #003e8a; padding: 10px; }
+    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+    section { padding: 40px; max-width: 1000px; margin: auto; background: white; }
+    footer { background-color: #0057b8; color: white; text-align: center; padding: 15px 0; }
+    h2 { color: #0057b8; }
   </style>
 </head>
 <body>
   <header>
     <h1>PS Network Experts</h1>
-    <p>Especialistas em soluções de telecomunicações e tecnologia</p>
+    <p>Apresentação Executiva</p>
   </header>
 
   <nav>
     <a href="#sobre">Sobre</a>
+    <a href="#indicadores">Indicadores</a>
+    <a href="#diferenciais">Diferenciais</a>
+    <a href="#casos">Casos</a>
     <a href="#servicos">Serviços</a>
     <a href="#contato">Contato</a>
   </nav>
 
   <section id="sobre">
     <h2>Sobre Nós</h2>
-    <p>Somos uma empresa com décadas de experiência em tecnologia e telecomunicações, oferecendo soluções de alta performance em redes ópticas, infraestrutura IP, segurança da informação e muito mais.</p>
+    <p>Com 12 anos de vida e uma equipe com mais de 20 anos de experiência, somos especialistas em ajudar operadoras de telecomunicações, empresas de tecnologia, data centers e provedores de infraestrutura digital a inovar, crescer e se manter à frente da concorrência.</p>
+    <p>Atuamos em grandes projetos de arquitetura, implantação e suporte para redes ópticas, backbone IP, metro, acesso, redes corporativas IT e operacionais OT.</p>
+    <p><strong>Missão:</strong> Promover mudanças positivas e sustentáveis, garantindo que nossos clientes permaneçam relevantes, lucrativos e alinhados às demandas de seus mercados.</p>
+  </section>
+
+  <section id="indicadores">
+    <h2>Indicadores de Sucesso</h2>
+    <ul>
+      <li>600+ Projetos Entregues</li>
+      <li>150 Intervenções Mensais</li>
+      <li>50 Engenheiros Especializados</li>
+      <li>10.000 Chamados Resolvidos/Mês</li>
+    </ul>
+  </section>
+
+  <section id="diferenciais">
+    <h2>Nossos Diferenciais</h2>
+    <ul>
+      <li>Tecnologia em Primeiro Lugar</li>
+      <li>Soluções Personalizadas e Integradas</li>
+      <li>Flexibilidade com Qualidade</li>
+      <li>Competência Multi Skill</li>
+      <li>Especialização Multi Vendor</li>
+      <li>Equipe Altamente Qualificada</li>
+      <li>Abordagem Consultiva</li>
+      <li>Atendimento Multilíngue</li>
+    </ul>
+  </section>
+
+  <section id="casos">
+    <h2>Casos de Sucesso</h2>
+    <p><strong>Operadoras de Grande Porte:</strong> GVT, Telefônica, Algar</p>
+    <p><strong>Operadoras Regionais:</strong> Alloha, Vero, Desktop</p>
+    <p><strong>Grandes Empresas:</strong> Energisa, TOTVS, Sicredi</p>
+    <p><strong>Parcerias:</strong> Colaboração com grandes integradores e revendas</p>
   </section>
 
   <section id="servicos">
     <h2>Nossos Serviços</h2>
     <ul>
-      <li>Construção e manutenção de redes ópticas</li>
-      <li>Backbones IP e redes de acesso</li>
-      <li>Planejamento estratégico em infraestrutura de TI</li>
-      <li>Consultoria em segurança da informação</li>
-      <li>Gerenciamento de projetos críticos</li>
+      <li>Consultoria Estratégica</li>
+      <li>Implantação de Projetos</li>
+      <li>Field Service</li>
+      <li>NOC 24/7</li>
+      <li>Inteligência de Dados (Data Lake, AI, ML)</li>
+      <li>Cibersegurança</li>
+      <li>Mobilidade (Wi-Fi e 5G Privado)</li>
+      <li>Redes e Data Center (LAN, WAN, Nuvem)</li>
     </ul>
   </section>
 
