--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
         <option value="reuniao">Solicitar Reunião Online</option>
       </select>
 
+      <label for="assunto">Assunto</label>
+      <select id="assunto" name="assunto">
+        <option value="consultoria">Consultoria Estratégica</option>
+        <option value="implantacao">Implantação de Projetos</option>
+        <option value="field">Field Service</option>
+        <option value="noc">NOC 24/7</option>
+        <option value="dados">Inteligência de Dados</option>
+        <option value="ciberseguranca">Cibersegurança</option>
+        <option value="mobilidade">Mobilidade (Wi-Fi e 5G)</option>
+        <option value="redes">Redes e Data Center</option>
+      </select>
+
       <label for="mensagem">Detalhes sobre seu projeto</label>
       <textarea id="mensagem" name="mensagem" rows="5"></textarea>
 
@@ -136,4 +148,3 @@
   </footer>
 </body>
 </html>
-
