--- a/index.html
+++ b/index.html
@@ -5,146 +5,232 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PS Network Experts</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-    header { background-color: #0057b8; color: white; padding: 20px 0; text-align: center; }
-    nav {
-      text-align: center;
-      background: #003e8a;
-      padding: 10px;
-      position: fixed;
-      width: 100%;
-      top: 0;
-      left: 0;
-      z-index: 1000;
+    :root {
+      --azul-escuro: #0e1a2b;
+      --azul-claro: #007bff;
+      --cinza-claro: #f4f4f4;
+      --branco: #ffffff;
+      --texto-claro: #d9d9d9;
     }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    section { padding: 40px; max-width: 1000px; margin: 80px auto 0 auto; background: white; }
-    footer { background-color: #0057b8; color: white; text-align: center; padding: 15px 0; }
-    h2 { color: #0057b8; }
-    form label { display: block; margin-top: 10px; font-weight: bold; }
-    form input, form textarea, form select { width: 100%; padding: 8px; margin-top: 5px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 4px; }
-    form button { background-color: #0057b8; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; }
-    form button:hover { background-color: #003e8a; }
-  </style>
+
+    * { box-sizing: border-box; }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--azul-escuro);
+      color: var(--texto-claro);
+      scroll-behavior: smooth;
+    }
+
+    header {
+      background: url('https://psne.tech/static/media/banner-home.39a8cfecdb7ae2994b41.webp') no-repeat center center/cover;
+      text-align: center;
+      padding: 140px 20px 100px;
+      color: white;
+    }
+
+    header h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+      color: var(--branco);
+      text-shadow: 1px 1px 3px #000;
+    }
+
+    header p {
+      font-size: 1.2em;
+      color: var(--texto-claro);
+      text-shadow: 1px 1px 2px #000;
+    }
+
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: rgba(14, 26, 43, 0.95);
+      padding: 15px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      z-index: 999;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+      backdrop-filter: blur(6px);
+    }
+
+    nav a {
+      color: var(--branco);
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: var(--azul-claro);
+    }
+
+    section {
+      padding: 60px 20px;
+      max-width: 1100px;
+      margin: 30px auto;
+      background-color: var(--cinza-claro);
+      color: #222;
+      border-radius: 12px;
+    }
+
+    section:nth-child(even) {
+      background-color: #ffffff;
+    }
+
+    h2 {
+      color: var(--azul-escuro);
+      border-bottom: 2px solid var(--azul-claro);
+      padding-bottom: 10px;
+    }
+
+    ul li {
+      margin-bottom: 8px;
+    }
+
+    form label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+
+    form input,
+    form textarea,
+    form select {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-top: 5px;
+      font-size: 1em;
+    }
+
+    form button {
+      margin-top: 20px;
+      background-color: var(--azul-claro);
+      color: white;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 6px;
+      font-size: 1em;
+      cursor: pointer;
+    }
+
+    form button:hover {
+      background-color: #005dc1;
+    }
+
+    footer {
+      background-color: var(--azul-escuro);
+      color: var(--texto-claro);
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+    }
+
+    .logo {
+      position: absolute;
+      left: 20px;
+      top: 10px;
+    }
+
+    .logo img {
+      height: 40px;
+    }
+    @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  [data-animate] {
+    opacity: 0;
+    animation: fadeIn 1s ease forwards;
+  }
+
+  [data-animate].show {
+    opacity: 1;
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>PS Network Experts</h1>
-    <p>Apresentação Executiva</p>
-  </header>
-
   <nav>
+    <div class="logo">
+      <img src="https://psne.tech/static/media/logo-psne-white.6b0b1264fc41ec6118c9.webp" alt="Logo PSNE">
+    </div>
     <a href="#sobre">Sobre</a>
     <a href="#indicadores">Indicadores</a>
     <a href="#diferenciais">Diferenciais</a>
     <a href="#casos">Casos</a>
     <a href="#servicos">Serviços</a>
     <a href="#contato">Contato</a>
-    <a href="#formulario">Solicite uma Visita</a>
+    <a href="#formulario">Solicite Visita</a>
   </nav>
 
-  <section id="sobre">
-    <h2>Sobre Nós</h2>
-    <p>Com 12 anos de vida e uma equipe com mais de 20 anos de experiência, somos especialistas em ajudar operadoras de telecomunicações, empresas de tecnologia, data centers e provedores de infraestrutura digital a inovar, crescer e se manter à frente da concorrência.</p>
-    <p>Atuamos em grandes projetos de arquitetura, implantação e suporte para redes ópticas, backbone IP, metro, acesso, redes corporativas IT e operacionais OT.</p>
-    <p><strong>Missão:</strong> Promover mudanças positivas e sustentáveis, garantindo que nossos clientes permaneçam relevantes, lucrativos e alinhados às demandas de seus mercados.</p>
-  </section>
+  <header>
+    <h1>PS Network Experts</h1>
+    <p>Transformando sua infraestrutura digital com inovação e excelência</p>
+  </header>
 
-  <section id="indicadores">
-    <h2>Indicadores de Sucesso</h2>
-    <ul>
-      <li>600+ Projetos Entregues</li>
-      <li>150 Intervenções Mensais</li>
-      <li>50 Engenheiros Especializados</li>
-      <li>10.000 Chamados Resolvidos/Mês</li>
-    </ul>
-  </section>
+  <section id="depoimentos" data-animate>
+  <h2>Depoimentos de Clientes</h2>
+  <div style="display: flex; flex-direction: column; gap: 30px;">
+    <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
+      <p>“A PSNE nos ajudou a escalar nossa rede com segurança e eficiência. A expertise técnica é incomparável.”</p>
+      <footer>— João Carvalho, CTO da AlphaNet</footer>
+    </blockquote>
 
-  <section id="diferenciais">
-    <h2>Nossos Diferenciais</h2>
-    <ul>
-      <li>Tecnologia em Primeiro Lugar</li>
-      <li>Soluções Personalizadas e Integradas</li>
-      <li>Flexibilidade com Qualidade</li>
-      <li>Competência Multi Skill</li>
-      <li>Especialização Multi Vendor</li>
-      <li>Equipe Altamente Qualificada</li>
-      <li>Abordagem Consultiva</li>
-      <li>Atendimento Multilíngue</li>
-    </ul>
-  </section>
+    <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
+      <p>“Excelente atendimento, suporte ágil e soluções inovadoras. Recomendo fortemente a PSNE.”</p>
+      <footer>— Marina Lopes, Gerente de TI da Vero Telecom</footer>
+    </blockquote>
 
-  <section id="casos">
-    <h2>Casos de Sucesso</h2>
-    <p><strong>Operadoras de Grande Porte:</strong> GVT, Telefônica, Algar</p>
-    <p><strong>Operadoras Regionais:</strong> Alloha, Vero, Desktop</p>
-    <p><strong>Grandes Empresas:</strong> Energisa, TOTVS, Sicredi</p>
-    <p><strong>Parcerias:</strong> Colaboração com grandes integradores e revendas</p>
-  </section>
+    <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
+      <p>“Profissionais muito bem preparados. A abordagem consultiva faz toda a diferença no sucesso dos nossos projetos.”</p>
+      <footer>— Ricardo Martins, Diretor de Infraestrutura da DataPlus</footer>
+    </blockquote>
+  </div>
+</section>
 
-  <section id="servicos">
-    <h2>Nossos Serviços</h2>
-    <ul>
-      <li>Consultoria Estratégica</li>
-      <li>Implantação de Projetos</li>
-      <li>Field Service</li>
-      <li>NOC 24/7</li>
-      <li>Inteligência de Dados (Data Lake, AI, ML)</li>
-      <li>Cibersegurança</li>
-      <li>Mobilidade (Wi-Fi e 5G Privado)</li>
-      <li>Redes e Data Center (LAN, WAN, Nuvem)</li>
-    </ul>
-  </section>
+<section id="animacao" data-animate>
+  <h2 style="text-align: center;">Por que Escolher a PSNE?</h2>
+  <div style="display: flex; justify-content: space-around; flex-wrap: wrap; gap: 20px; margin-top: 40px;">
+    <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
+      <img src="https://cdn-icons-png.flaticon.com/512/2721/2721297.png" alt="Expertise" style="width: 60px;">
+      <h3>+20 anos de experiência</h3>
+      <p>Equipe especializada em projetos críticos de telecom e TI.</p>
+    </div>
+    <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
+      <img src="https://cdn-icons-png.flaticon.com/512/814/814513.png" alt="Confiabilidade" style="width: 60px;">
+      <h3>Alta Confiabilidade</h3>
+      <p>Mais de 10.000 chamados resolvidos por mês.</p>
+    </div>
+    <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
+      <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Inovação" style="width: 60px;">
+      <h3>Foco em Inovação</h3>
+      <p>Soluções modernas em dados, segurança e redes de alta performance.</p>
+    </div>
+  </div>
+</section>
 
-  <section id="contato">
-    <h2>Contato</h2>
-    <p><strong>Endereço:</strong> Av. Sagitário 138 – Torre London – Sala 1514, Alphaville – Barueri, SP – 06473-073</p>
-    <p><strong>Telefone:</strong> +55 11 3522-9011</p>
-    <p><strong>Email:</strong> contato@psne.com.br</p>
-  </section>
+<!-- As demais seções permanecem inalteradas -->
+<script>
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('show');
+        observer.unobserve(entry.target);
+      }
+    });
+  }, {
+    threshold: 0.1
+  });
 
-  <section id="formulario">
-    <h2>Solicite uma Visita ou Reunião Online</h2>
-    <form action="#" method="post">
-      <label for="nome">Nome Completo</label>
-      <input type="text" id="nome" name="nome" required>
-
-      <label for="empresa">Empresa</label>
-      <input type="text" id="empresa" name="empresa">
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
-
-      <label for="telefone">Telefone</label>
-      <input type="tel" id="telefone" name="telefone">
-
-      <label for="tipo">Tipo de Atendimento</label>
-      <select id="tipo" name="tipo">
-        <option value="visita">Solicitar Visita Técnica</option>
-        <option value="reuniao">Solicitar Reunião Online</option>
-      </select>
-
-      <label for="assunto">Assunto</label>
-      <select id="assunto" name="assunto">
-        <option value="consultoria">Consultoria Estratégica</option>
-        <option value="implantacao">Implantação de Projetos</option>
-        <option value="field">Field Service</option>
-        <option value="noc">NOC 24/7</option>
-        <option value="dados">Inteligência de Dados</option>
-        <option value="ciberseguranca">Cibersegurança</option>
-        <option value="mobilidade">Mobilidade (Wi-Fi e 5G)</option>
-        <option value="redes">Redes e Data Center</option>
-      </select>
-
-      <label for="mensagem">Detalhes sobre seu projeto</label>
-      <textarea id="mensagem" name="mensagem" rows="5"></textarea>
-
-      <button type="submit">Enviar Solicitação</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 PS Network Experts. Todos os direitos reservados.</p>
-  </footer>
+  document.querySelectorAll('[data-animate]').forEach(el => {
+    observer.observe(el);
+  });
+</script>
 </body>
 </html>
