--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
       --texto-claro: #d9d9d9;
     }
 
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
     body {
-      margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: var(--azul-escuro);
       color: var(--texto-claro);
@@ -27,19 +30,17 @@
       background: url('https://psne.tech/static/media/banner-home.39a8cfecdb7ae2994b41.webp') no-repeat center center/cover;
       text-align: center;
       padding: 140px 20px 100px;
-      color: white;
+      color: var(--branco);
     }
 
     header h1 {
       font-size: 3em;
       margin-bottom: 10px;
-      color: var(--branco);
       text-shadow: 1px 1px 3px #000;
     }
 
     header p {
       font-size: 1.2em;
-      color: var(--texto-claro);
       text-shadow: 1px 1px 2px #000;
     }
 
@@ -85,6 +86,7 @@
       color: var(--azul-escuro);
       border-bottom: 2px solid var(--azul-claro);
       padding-bottom: 10px;
+      margin-bottom: 20px;
     }
 
     ul li {
@@ -140,20 +142,21 @@
     .logo img {
       height: 40px;
     }
+
     @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(20px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-  [data-animate] {
-    opacity: 0;
-    animation: fadeIn 1s ease forwards;
-  }
+    [data-animate] {
+      opacity: 0;
+      animation: fadeIn 1s ease forwards;
+    }
 
-  [data-animate].show {
-    opacity: 1;
-  }
-</style>
+    [data-animate].show {
+      opacity: 1;
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -170,67 +173,157 @@
   </nav>
 
   <header>
-    <h1>PS Network Experts</h1>
-    <p>Transformando sua infraestrutura digital com inovação e excelência</p>
+    <h1>Impulsionamos a Inovação</h1>
+    <p>Infraestrutura digital para empresas que querem crescer com segurança e tecnologia de ponta.</p>
   </header>
 
   <section id="depoimentos" data-animate>
-  <h2>Depoimentos de Clientes</h2>
-  <div style="display: flex; flex-direction: column; gap: 30px;">
-    <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
-      <p>“A PSNE nos ajudou a escalar nossa rede com segurança e eficiência. A expertise técnica é incomparável.”</p>
-      <footer>— João Carvalho, CTO da AlphaNet</footer>
-    </blockquote>
-
-    <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
-      <p>“Excelente atendimento, suporte ágil e soluções inovadoras. Recomendo fortemente a PSNE.”</p>
-      <footer>— Marina Lopes, Gerente de TI da Vero Telecom</footer>
-    </blockquote>
-
-    <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
-      <p>“Profissionais muito bem preparados. A abordagem consultiva faz toda a diferença no sucesso dos nossos projetos.”</p>
-      <footer>— Ricardo Martins, Diretor de Infraestrutura da DataPlus</footer>
-    </blockquote>
-  </div>
-</section>
-
-<section id="animacao" data-animate>
-  <h2 style="text-align: center;">Por que Escolher a PSNE?</h2>
-  <div style="display: flex; justify-content: space-around; flex-wrap: wrap; gap: 20px; margin-top: 40px;">
-    <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
-      <img src="https://cdn-icons-png.flaticon.com/512/2721/2721297.png" alt="Expertise" style="width: 60px;">
-      <h3>+20 anos de experiência</h3>
-      <p>Equipe especializada em projetos críticos de telecom e TI.</p>
+    <h2>O que dizem nossos clientes</h2>
+    <div style="display: flex; flex-direction: column; gap: 30px;">
+      <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
+        <p>“A PSNE nos ajudou a escalar nossa rede com segurança e eficiência. A expertise técnica é incomparável.”</p>
+        <footer>— João Carvalho, CTO da AlphaNet</footer>
+      </blockquote>
+      <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
+        <p>“Excelente atendimento, suporte ágil e soluções inovadoras. Recomendo fortemente a PSNE.”</p>
+        <footer>— Marina Lopes, Gerente de TI da Vero Telecom</footer>
+      </blockquote>
+      <blockquote style="background-color: #ffffff; padding: 20px; border-left: 5px solid var(--azul-claro); border-radius: 8px;">
+        <p>“Profissionais muito bem preparados. A abordagem consultiva faz toda a diferença no sucesso dos nossos projetos.”</p>
+        <footer>— Ricardo Martins, Diretor de Infraestrutura da DataPlus</footer>
+      </blockquote>
     </div>
-    <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
-      <img src="https://cdn-icons-png.flaticon.com/512/814/814513.png" alt="Confiabilidade" style="width: 60px;">
-      <h3>Alta Confiabilidade</h3>
-      <p>Mais de 10.000 chamados resolvidos por mês.</p>
-    </div>
-    <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
-      <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Inovação" style="width: 60px;">
-      <h3>Foco em Inovação</h3>
-      <p>Soluções modernas em dados, segurança e redes de alta performance.</p>
-    </div>
-  </div>
-</section>
+  </section>
 
-<!-- As demais seções permanecem inalteradas -->
-<script>
-  const observer = new IntersectionObserver((entries) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.classList.add('show');
-        observer.unobserve(entry.target);
-      }
+  </section>
+
+  <section id="sobre" data-animate>
+    <h2>Sobre a PSNE</h2>
+    <p>A PS Network Experts é uma empresa especializada em soluções de infraestrutura digital, com mais de 20 anos de experiência em telecomunicações, redes e tecnologia. Atuamos com inovação, flexibilidade e excelência técnica para transformar os desafios dos nossos clientes em resultados concretos.</p>
+  </section>
+
+  <section id="indicadores" data-animate>
+    <h2>Nossos Números</h2>
+    <ul>
+      <li><strong>+600</strong> projetos entregues</li>
+      <li><strong>+10 mil</strong> chamados resolvidos por mês</li>
+      <li><strong>+50</strong> engenheiros certificados</li>
+      <li><strong>+150</strong> janelas de intervenção por mês</li>
+    </ul>
+  </section>
+
+  <section id="diferenciais" data-animate>
+    <h2>Diferenciais</h2>
+    <ul>
+      <li>Equipe com experiência real de campo</li>
+      <li>Profissionais com certificações nas principais fabricantes</li>
+      <li>Soluções customizadas com foco em resultado</li>
+      <li>Atendimento multilíngue (Português, Inglês e Espanhol)</li>
+    </ul>
+  </section>
+
+  <section id="casos" data-animate>
+    <h2>Casos de Sucesso</h2>
+    <p>Atuamos com operadoras de grande porte como GVT, Vivo, Algar e também com ISPs regionais como Alloha, Vero e Desktop. Temos parcerias estratégicas com integradores, data centers e empresas como Energisa, Sicredi e TOTVS.</p>
+  </section>
+
+  <section id="servicos" data-animate>
+    <h2>Serviços</h2>
+    <ul>
+      <li>Consultoria Estratégica em Infraestrutura</li>
+      <li>Implantação de Redes e Projetos Turnkey</li>
+      <li>Field Service com equipe especializada</li>
+      <li>NOC 24/7 com gestão de incidentes</li>
+      <li>Data Intelligence com IA e Machine Learning</li>
+      <li>Cibersegurança e continuidade de negócios</li>
+      <li>Mobilidade Corporativa: Wi-Fi e 5G Privado</li>
+      <li>Redes Corporativas e Data Centers (LAN/WAN/Cloud)</li>
+    </ul>
+  </section>
+
+  <section id="contato" data-animate>
+    <h2>Fale Conosco</h2>
+    <p><strong>Endereço:</strong> Av. Sagitário 138 – Torre London – Sala 1514, Alphaville – Barueri, SP – 06473-073</p>
+    <p><strong>Telefone:</strong> +55 11 3522-9011</p>
+    <p><strong>Email:</strong> contato@psne.com.br</p>
+  </section>
+
+  <section id="formulario" data-animate>
+    <h2>Solicite uma Reunião</h2>
+    <form action="#" method="post">
+      <label for="nome">Nome Completo</label>
+      <input type="text" id="nome" name="nome" required>
+
+      <label for="empresa">Empresa</label>
+      <input type="text" id="empresa" name="empresa">
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="telefone">Telefone</label>
+      <input type="tel" id="telefone" name="telefone">
+
+      <label for="tipo">Tipo de Atendimento</label>
+      <select id="tipo" name="tipo">
+        <option value="visita">Solicitar Visita Técnica</option>
+        <option value="reuniao">Solicitar Reunião Online</option>
+      </select>
+
+      <label for="assunto">Assunto</label>
+      <select id="assunto" name="assunto">
+        <option value="consultoria">Consultoria Estratégica</option>
+        <option value="implantacao">Implantação de Projetos</option>
+        <option value="field">Field Service</option>
+        <option value="noc">NOC 24/7</option>
+        <option value="dados">Inteligência de Dados</option>
+        <option value="ciberseguranca">Cibersegurança</option>
+        <option value="mobilidade">Mobilidade (Wi-Fi e 5G)</option>
+        <option value="redes">Redes e Data Center</option>
+      </select>
+
+      <label for="mensagem">Mensagem</label>
+      <textarea id="mensagem" name="mensagem" rows="5"></textarea>
+
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
+
+  <section id="animacao" data-animate>
+    <h2 style="text-align: center;">Por que escolher a PSNE?</h2>
+    <div style="display: flex; justify-content: space-around; flex-wrap: wrap; gap: 20px; margin-top: 40px;">
+      <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
+        <img src="https://cdn-icons-png.flaticon.com/512/2721/2721297.png" alt="Expertise" style="width: 60px;">
+        <h3>Experiência de mercado</h3>
+        <p>Mais de 20 anos transformando redes em estruturas inteligentes, resilientes e seguras.</p>
+      </div>
+      <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
+        <img src="https://cdn-icons-png.flaticon.com/512/814/814513.png" alt="Confiabilidade" style="width: 60px;">
+        <h3>Alta confiabilidade</h3>
+        <p>Entrega contínua com excelência operacional e suporte 24/7.</p>
+      </div>
+      <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
+        <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Inovação" style="width: 60px;">
+        <h3>Inovação e tecnologia</h3>
+        <p>Projetos personalizados com tecnologias líderes do setor.</p>
+      </div>
+    </div>
+  </section>
+
+  <script>
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('show');
+          observer.unobserve(entry.target);
+        }
+      });
+    }, {
+      threshold: 0.1
     });
-  }, {
-    threshold: 0.1
-  });
 
-  document.querySelectorAll('[data-animate]').forEach(el => {
-    observer.observe(el);
-  });
-</script>
+    document.querySelectorAll('[data-animate]').forEach(el => {
+      observer.observe(el);
+    });
+  </script>
 </body>
 </html>
