--- a/index.html
+++ b/index.html
@@ -209,14 +209,22 @@ text-align: center;
   </section>
 
   <section id="diferenciais" data-animate>
-    <h2>Diferenciais</h2>
-    <ul>
-      <li>Equipe com experiência real de campo</li>
-      <li>Profissionais com certificações nas principais fabricantes</li>
-      <li>Soluções customizadas com foco em resultado</li>
-      <li>Atendimento multilíngue (Português, Inglês e Espanhol)</li>
-    </ul>
-  </section>
+  <h2>Diferenciais</h2>
+  <div style="display: flex; flex-direction: column; gap: 20px;">
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Experiência Prática e Multissetorial</h3>
+      <p>Nosso time técnico não apenas conhece as tecnologias mais avançadas do mercado, mas também vivencia os ambientes reais dos clientes. Isso garante entregas com foco na operação e não apenas na teoria.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Especialização em Diversos Fabricantes</h3>
+      <p>Trabalhamos com as principais marcas e plataformas do setor, com profissionais certificados e capazes de oferecer soluções integradas, flexíveis e seguras para cada cenário de negócio.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Atendimento com Escopo Personalizado</h3>
+      <p>Não aplicamos fórmulas prontas. Cada cliente é único, e nossas soluções refletem essa realidade. Seja na infraestrutura, operação ou suporte, adaptamos tudo ao que seu negócio realmente precisa.</p>
+    </div>
+  </div>
+</section>
 
   <section id="casos" data-animate>
     <h2>Casos de Sucesso</h2>
@@ -224,18 +232,30 @@ text-align: center;
   </section>
 
   <section id="servicos" data-animate>
-    <h2>Serviços</h2>
-    <ul>
-      <li>Consultoria Estratégica em Infraestrutura</li>
-      <li>Implantação de Redes e Projetos Turnkey</li>
-      <li>Field Service com equipe especializada</li>
-      <li>NOC 24/7 com gestão de incidentes</li>
-      <li>Data Intelligence com IA e Machine Learning</li>
-      <li>Cibersegurança e continuidade de negócios</li>
-      <li>Mobilidade Corporativa: Wi-Fi e 5G Privado</li>
-      <li>Redes Corporativas e Data Centers (LAN/WAN/Cloud)</li>
-    </ul>
-  </section>
+  <h2>Serviços</h2>
+  <div style="display: flex; flex-direction: column; gap: 20px;">
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Consultoria Estratégica</h3>
+      <p>Alinhamos tecnologia aos objetivos do seu negócio, com planos de ação focados em crescimento, performance e continuidade operacional.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Implantação e Projetos</h3>
+      <p>Do planejamento à ativação, realizamos a entrega completa de redes, infraestrutura e soluções em telecomunicações.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Field Services & NOC 24/7</h3>
+      <p>Monitoramento, operação e manutenção contínua com alta disponibilidade, equipe em campo e gestão de incidentes em tempo real.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Data Intelligence e Cibersegurança</h3>
+      <p>Aplicação de inteligência artificial, big data e segurança da informação para garantir operações protegidas, ágeis e baseadas em dados.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Redes Corporativas e Mobilidade</h3>
+      <p>Projetos de redes LAN, WAN e Wi-Fi corporativo, além de conectividade 5G Privado e integração com ambientes em nuvem.</p>
+    </div>
+  </div>
+</section>
 
   <section id="contato" data-animate>
     <h2>Fale Conosco</h2>
@@ -285,25 +305,24 @@ text-align: center;
   </section>
 
   <section id="animacao" data-animate>
-    <h2 style="text-align: center;">Por que escolher a PSNE?</h2>
-    <div style="display: flex; justify-content: space-around; flex-wrap: wrap; gap: 20px; margin-top: 40px;">
-      <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
-        <img src="https://cdn-icons-png.flaticon.com/512/2721/2721297.png" alt="Expertise" style="width: 60px;">
-        <h3>Experiência de mercado</h3>
-        <p>Mais de 20 anos transformando redes em estruturas inteligentes, resilientes e seguras.</p>
-      </div>
-      <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
-        <img src="https://cdn-icons-png.flaticon.com/512/814/814513.png" alt="Confiabilidade" style="width: 60px;">
-        <h3>Alta confiabilidade</h3>
-        <p>Entrega contínua com excelência operacional e suporte 24/7.</p>
-      </div>
-      <div style="flex: 1 1 300px; background-color: white; padding: 20px; border-radius: 12px; text-align: center; transition: transform 0.3s ease;">
-        <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="Inovação" style="width: 60px;">
-        <h3>Inovação e tecnologia</h3>
-        <p>Projetos personalizados com tecnologias líderes do setor.</p>
-      </div>
+  <h2 style="text-align: center;">Por que escolher a PSNE?</h2>
+  <div style="display: flex; flex-direction: column; gap: 20px; margin-top: 20px;">
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Profundidade Técnica com Visão Estratégica</h3>
+      <p>Nossos especialistas combinam conhecimento técnico avançado com compreensão estratégica dos negócios, garantindo soluções que não apenas funcionam, mas impulsionam o crescimento e a eficiência operacional.</p>
     </div>
-  </section>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Compromisso com a Qualidade e a Disponibilidade</h3>
+      <p>Com processos rigorosos, NOC 24/7 e atendimento multilíngue, asseguramos suporte contínuo, entregas pontuais e ambientes resilientes com alto grau de confiabilidade.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Inovação Orientada a Resultados</h3>
+      <p>Aplicamos tecnologias como IA, automação e redes programáveis para acelerar a transformação digital dos nossos clientes, mantendo foco em segurança, performance e escalabilidade.</p>
+    </div>
+  </div>
+</section>
+
+  <section id="sobre" data-animate>
 
   <script>
     const observer = new IntersectionObserver((entries) => {
