--- a/index.html
+++ b/index.html
@@ -168,10 +168,26 @@ text-align: center;
     <a href="#formulario">Solicite Visita</a>
   </nav>
 
-  <header>
-    <h1>Impulsionamos a Inovação</h1>
-    <p>Infraestrutura digital para empresas que querem crescer com segurança e tecnologia de ponta.</p>
-  </header>
+  $1
+
+  <section id="animacao" data-animate">
+    <h2 style="text-align: center;">Por que escolher a PSNE?</h2>
+    <div style="display: flex; flex-direction: column; gap: 20px; margin-top: 20px;">
+      <div style="background-color: white; padding: 25px; border-radius: 12px;">
+        <h3>Profundidade Técnica com Visão Estratégica</h3>
+        <p>Nossos especialistas combinam conhecimento técnico avançado com compreensão estratégica dos negócios, garantindo soluções que não apenas funcionam, mas impulsionam o crescimento e a eficiência operacional.</p>
+      </div>
+      <div style="background-color: white; padding: 25px; border-radius: 12px;">
+        <h3>Compromisso com a Qualidade e a Disponibilidade</h3>
+        <p>Com processos rigorosos, NOC 24/7 e atendimento multilíngue, asseguramos suporte contínuo, entregas pontuais e ambientes resilientes com alto grau de confiabilidade.</p>
+      </div>
+      <div style="background-color: white; padding: 25px; border-radius: 12px;">
+        <h3>Inovação Orientada a Resultados</h3>
+        <p>Aplicamos tecnologias como IA, automação e redes programáveis para acelerar a transformação digital dos nossos clientes, mantendo foco em segurança, performance e escalabilidade.</p>
+      </div>
+    </div>
+  </section>
+
 
   <section id="depoimentos" data-animate>
     <h2>O que dizem nossos clientes</h2>
@@ -194,9 +210,12 @@ text-align: center;
   </section>
 
   <section id="sobre" data-animate>
-    <h2>Sobre a PSNE</h2>
-    <p>A PS Network Experts é uma empresa especializada em soluções de infraestrutura digital, com mais de 20 anos de experiência em telecomunicações, redes e tecnologia. Atuamos com inovação, flexibilidade e excelência técnica para transformar os desafios dos nossos clientes em resultados concretos.</p>
-  </section>
+  <h2>Sobre a PSNE</h2>
+  <div style="background-color: white; padding: 25px; border-radius: 12px;">
+    <p>Com mais de duas décadas de experiência em projetos críticos de telecomunicações, redes e TI, a PS Network Experts nasceu para resolver problemas reais com excelência técnica e mentalidade consultiva. Atuamos lado a lado com nossos clientes para construir infraestruturas resilientes, inteligentes e preparadas para o futuro.</p>
+    <p>Nossa missão é entregar valor contínuo através de soluções personalizadas, mantendo um time altamente capacitado, certificado e comprometido com o sucesso de cada entrega.</p>
+  </div>
+</section>
 
   <section id="indicadores" data-animate>
     <h2>Nossos Números</h2>
@@ -227,9 +246,22 @@ text-align: center;
 </section>
 
   <section id="casos" data-animate>
-    <h2>Casos de Sucesso</h2>
-    <p>Atuamos com operadoras de grande porte como GVT, Vivo, Algar e também com ISPs regionais como Alloha, Vero e Desktop. Temos parcerias estratégicas com integradores, data centers e empresas como Energisa, Sicredi e TOTVS.</p>
-  </section>
+  <h2>Casos de Sucesso</h2>
+  <div style="display: flex; flex-direction: column; gap: 20px;">
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Operadoras de Grande Porte</h3>
+      <p>Implementamos soluções de alta disponibilidade e redes multisserviços para empresas como GVT, Vivo e Algar, apoiando sua expansão e confiabilidade operacional.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>ISPs Regionais</h3>
+      <p>Trabalhamos com Alloha, Vero e Desktop oferecendo escalabilidade, controle e eficiência em redes de acesso e backbone regional.</p>
+    </div>
+    <div style="background-color: white; padding: 25px; border-radius: 12px;">
+      <h3>Setor Corporativo e Institucional</h3>
+      <p>Projetos com TOTVS, Sicredi e Energisa demonstram nossa capacidade de integrar tecnologia à operação com segurança, inteligência e governança.</p>
+    </div>
+  </div>
+</section>
 
   <section id="servicos" data-animate>
   <h2>Serviços</h2>
@@ -303,24 +335,6 @@ text-align: center;
       <button type="submit">Enviar</button>
     </form>
   </section>
-
-  <section id="animacao" data-animate>
-  <h2 style="text-align: center;">Por que escolher a PSNE?</h2>
-  <div style="display: flex; flex-direction: column; gap: 20px; margin-top: 20px;">
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Profundidade Técnica com Visão Estratégica</h3>
-      <p>Nossos especialistas combinam conhecimento técnico avançado com compreensão estratégica dos negócios, garantindo soluções que não apenas funcionam, mas impulsionam o crescimento e a eficiência operacional.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Compromisso com a Qualidade e a Disponibilidade</h3>
-      <p>Com processos rigorosos, NOC 24/7 e atendimento multilíngue, asseguramos suporte contínuo, entregas pontuais e ambientes resilientes com alto grau de confiabilidade.</p>
-    </div>
-    <div style="background-color: white; padding: 25px; border-radius: 12px;">
-      <h3>Inovação Orientada a Resultados</h3>
-      <p>Aplicamos tecnologias como IA, automação e redes programáveis para acelerar a transformação digital dos nossos clientes, mantendo foco em segurança, performance e escalabilidade.</p>
-    </div>
-  </div>
-</section>
 
   <section id="sobre" data-animate>
 
