--- a/index.html
+++ b/index.html
@@ -158,3 +158,254 @@
 
 </body>
 </html>
+Se quiser transformar isso em um site com design mais moderno (incluindo imagens, responsividade, animações ou integração com frameworks como Bootstrap ou Tailwind), posso te ajudar também. Deseja?
+
+
+
+
+
+
+
+You said:
+melhore a arquitetura e adicione o nome da empresa PSNE no inicio do site e em destaque
+ChatGPT said:
+Perfeito! Aqui está uma versão aprimorada do HTML, com melhorias na arquitetura visual, melhor organização em seções semânticas, e o nome PSNE em destaque logo no topo, como marca principal. Também inclui melhorias no layout, tipografia, responsividade e estrutura para facilitar manutenção futura:
+
+html
+Copy
+Edit
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PSNE - PS Network Experts 2025</title>
+  <style>
+    :root {
+      --cor-primaria: #004080;
+      --cor-secundaria: #0066cc;
+      --cor-fundo: #f4f4f4;
+      --cor-texto: #333;
+      --cor-branca: #fff;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: var(--cor-fundo);
+      color: var(--cor-texto);
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: var(--cor-primaria);
+      color: var(--cor-branca);
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+    }
+
+    section {
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .section-title {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: var(--cor-primaria);
+      border-bottom: 2px solid var(--cor-secundaria);
+      padding-bottom: 10px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    footer {
+      background-color: var(--cor-primaria);
+      color: var(--cor-branca);
+      text-align: center;
+      padding: 30px 20px;
+      margin-top: 40px;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      .section-title {
+        font-size: 1.5rem;
+      }
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>PSNE</h1>
+  <p>PS Network Experts - Inovando Infraestruturas Digitais desde 2012</p>
+</header>
+
+<main>
+
+  <section>
+    <h2 class="section-title">Sobre Nós</h2>
+    <p>Com 12 anos de experiência e uma equipe com mais de 20 anos de atuação em tecnologia, a PSNE é especialista em auxiliar operadoras, data centers e provedores a inovar, crescer e se manter à frente da concorrência.</p>
+  </section>
+
+  <section>
+    <h2 class="section-title">Missão</h2>
+    <p>Promover mudanças positivas e sustentáveis, garantindo que nossos clientes permaneçam relevantes, lucrativos e alinhados às demandas de seus mercados.</p>
+  </section>
+
+  <section>
+    <h2 class="section-title">Indicadores de Sucesso</h2>
+    <div class="grid">
+      <div><strong>600+</strong><br>Projetos Entregues</div>
+      <div><strong>150</strong><br>Intervenções Mensais</div>
+      <div><strong>50</strong><br>Engenheiros Especializados</div>
+      <div><strong>10.000+</strong><br>Chamados resolvidos/mês</div>
+    </div>
+  </section>
+
+  <section>
+    <h2 class="section-title">Diferenciais</h2>
+    <ul>
+      <li>Tecnologia em Primeiro Lugar</li>
+      <li>Soluções Personalizadas e Integradas</li>
+      <li>Flexibilidade com Qualidade</li>
+      <li>Competência Multi Skill e Multi Vendor</li>
+      <li>Equipe Altamente Qualificada</li>
+      <li>Abordagem Consultiva</li>
+      <li>Atendimento Multilíngue (Português, Inglês e Espanhol)</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 class="section-title">Casos de Sucesso</h2>
+    <ul>
+      <li><strong>Operadoras de Grande Porte:</strong> GVT, Telefônica, Algar</li>
+      <li><strong>Operadoras Regionais:</strong> Alloha, Vero, Desktop</li>
+      <li><strong>Grandes Empresas:</strong> Energisa, TOTVS, Sicredi</li>
+      <li><strong>Parceiros:</strong> Grandes integradores e revendas</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 class="section-title">Nossa Equipe</h2>
+    <p>Composta por especialistas altamente qualificados em telecomunicações, tecnologia e infraestrutura digital. Experiência prática e conhecimento multidisciplinar para transformar ideias em resultados tangíveis.</p>
+  </section>
+
+  <section>
+    <h2 class="section-title">Parcerias Tecnológicas</h2>
+    <h3>GAIO - Data Lake Inteligente</h3>
+    <ul>
+      <li>Automação de processos e decisões</li>
+      <li>Redução de custos operacionais</li>
+      <li>Prevenção de fraudes com IA/ML</li>
+      <li>Melhoria da experiência do cliente</li>
+    </ul>
+
+    <h3>ARISTA - Infraestrutura de Alta Performance</h3>
+    <ul>
+      <li>Alta escalabilidade</li>
+      <li>Automação via EOS e APIs</li>
+      <li>Baixa latência e alto throughput</li>
+      <li>Integração com Multicloud e 5G Edge</li>
+      <li>Monitoramento em tempo real com CloudVision</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 class="section-title">Liderança PSNE</h2>
+    <ul>
+      <li>Rogerio Vedovato – Presidente</li>
+      <li>Alberto Noronha – Diretor Executivo</li>
+      <li>Mauricio Maehara – Diretor Executivo</li>
+      <li>Renato Vaz – Diretor de Projetos</li>
+      <li>Morgana Jacomini – Diretora de Novos Negócios</li>
+      <li>Carlil Gibran – Diretor de Consultoria</li>
+      <li>Eder Marcelo – Diretor de Serviços</li>
+      <li>Raphael Luca – Diretor de Clientes</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 class="section-title">Certificações</h2>
+    <div class="grid">
+      <div><strong>Arista:</strong> ACE Cloud Associate a Expert</div>
+      <div><strong>Cisco:</strong> CCNA, CCNP, CCIE</div>
+      <div><strong>Fortinet:</strong> NSE 1 a NSE 4</div>
+      <div><strong>Huawei:</strong> HCIP, HCIE (em andamento)</div>
+      <div><strong>Juniper:</strong> JNCIA a JNCIE_SP</div>
+    </div>
+  </section>
+
+  <section>
+    <h2 class="section-title">Desafios do Mercado</h2>
+    <ul>
+      <li>Adaptação às forças regulatórias</li>
+      <li>Resposta às novas dinâmicas de mercado</li>
+      <li>Atendimento às expectativas crescentes dos clientes</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 class="section-title">Nossa Abordagem</h2>
+    <ul>
+      <li>Conhecimento Profundo do Setor</li>
+      <li>Visão Estratégica</li>
+      <li>Especialização Tecnológica</li>
+      <li>Soluções Consultivas Personalizadas</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 class="section-title">Serviços PSNE</h2>
+    <ul>
+      <li><strong>Consultoria:</strong> Estratégia e modelos de negócio</li>
+      <li><strong>Implantação:</strong> Integração de tecnologias</li>
+      <li><strong>Field Service:</strong> Suporte especializado in loco</li>
+      <li><strong>NOC:</strong> Monitoramento 24/7</li>
+      <li><strong>Data Intelligence:</strong> Data Lake, IA e ML</li>
+      <li><strong>Cibersegurança:</strong> Proteção total da infraestrutura</li>
+      <li><strong>Mobilidade:</strong> Wi-Fi e 5G Privado</li>
+      <li><strong>Redes & Data Center:</strong> LAN, WAN e Nuvem</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2 class="section-title">Transforme sua Infraestrutura Digital</h2>
+    <p>Descubra como a PSNE pode impulsionar inovação, crescimento e sustentabilidade para o seu negócio. Fale conosco para uma consultoria personalizada.</p>
+  </section>
+
+</main>
+
+<footer>
+  <p>&copy; 2025 PSNE - PS Network Experts. Todos os direitos reservados.</p>
+</footer>
+
+</body>
+</html>
